@@ -1,6 +1,7 @@
 plugins {
 	id 'application'
-	id 'org.openjfx.javafxplugin' version '0.0.8'
+	id 'org.openjfx.javafxplugin' version '0.0.10'
+	//id 'com.palantir.docker' version '0.30.0'
 }
 
 application {
@@ -8,65 +9,32 @@ application {
 	applicationDefaultJvmArgs = ["-Xss1024m", "-Xmx8g"]
 }
 
-//run {
-//	doFirst {
-//		jvmArgs = [
-//				'--module-path', classpath.asPath,
-//				'--add-modules="javafx.controls,javafx.swing"'
-//		]
-//	}
-//}
-
-//compileJava {
-//	doFirst {
-//		options.compilerArgs = [
-//				'--module-path', classpath.asPath,
-//				'--add-modules', 'javafx.controls,javafx.swing'
-//		]
-//	}
-//}
-
 javafx {
-	version = "13.0.1"
-	modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.swing']
+	version = "16"
+	modules = [ 'javafx.controls' ]
 }
 
 dependencies {
-	implementation 'org.graphstream:gs-core:1.3'
-	implementation 'org.graphstream:gs-algo:1.3'
-	implementation 'org.graphstream:gs-ui:1.3'
-
-//	implementation group: 'org.openjfx', name: 'javafx', version: '13.0.1'
-//	implementation group: 'org.openjfx', name: 'javafx-base', version: '13.0.1'
-//	implementation group: 'org.openjfx', name: 'javafx-controls', version: '13.0.1'
-//	implementation group: 'org.openjfx', name: 'javafx-graphics', version: '13.0.1'
-//	implementation group: 'org.openjfx', name: 'javafx-swing', version: '13.0.1'
-//
-//	runtimeOnly "org.openjfx:javafx-base:13.0.1:win"
-//	runtimeOnly "org.openjfx:javafx-base:13.0.1:linux"
-//	runtimeOnly "org.openjfx:javafx-base:13.0.1:mac"
-//
-//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:win"
-//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:linux"
-//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:mac"
-//
-//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:win"
-//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:linux"
-//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:mac"
-//
-//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:win"
-//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:linux"
-//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:mac"
+	implementation 'org.graphstream:gs-core:2.0'
+	implementation 'org.graphstream:gs-algo:2.0'
+	implementation 'org.graphstream:gs-ui-javafx:2.0'
 
 	implementation project(':ecco-service')
+	implementation files('../adapter/java-patched/at.jku.cdl.ecco.adapter.java-patched.jar')
 
-	// the following should be "testRuntimeOnly". however, javafx seems to mess up these dependencies for the entire project.
-	testImplementation project(':ecco-adapter-file')
-	testImplementation project(':ecco-adapter-text')
-	testImplementation project(':ecco-adapter-image')
-	testImplementation project(':ecco-adapter-challenge')
-	testImplementation project(':ecco-adapter-runtime')
-	testImplementation project(':ecco-adapter-cpp')
+	runtimeOnly project(':ecco-adapter-file')
+	runtimeOnly project(':ecco-adapter-text')
+	runtimeOnly project(':ecco-adapter-image')
+//	runtimeOnly project(':ecco-adapter-java')
+//	runtimeOnly project(':ecco-adapter-lilypond')
+
+
+	testRuntimeOnly project(':ecco-adapter-file')
+	testRuntimeOnly project(':ecco-adapter-text')
+	testRuntimeOnly project(':ecco-adapter-image')
+	testRuntimeOnly project(':ecco-adapter-challenge')
+	testRuntimeOnly project(':ecco-adapter-cpp')
+	testRuntimeOnly project(':ecco-adapter-runtime')
 }
 
 ospackage {
@@ -107,4 +75,20 @@ task copyScripts(type: Copy) {
 	from 'ecco-gui', 'ecco-gui.bat'
 	into project.file('build/bundle/')
 }
+
+repositories {
+	mavenCentral()
+}
 bundle.dependsOn += copyScripts
+
+/*
+apply plugin: 'com.palantir.docker'
+docker {
+	name "ecco-gui:${project.version}"
+	files "build/distribution/ecco-gui-${project.version}-linux.zip"
+	dockerfile file('Dockerfile')
+	//buildArgs(['BUILD_VERSION': "${project.version}"])
+}
+
+tasks.getByPath('docker').dependsOn('linuxZip')
+*/
